--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ license = "Apache-2.0"
 name = "pi_wars_bot"
 publish = false
 readme = "README.md"
+keywords = ["discord", "bot", "twitter"]
+categories = ["bot", "discord"]
 repository = "https://github.com/shymega/PiWarsBot"
 version = "0.1.0"
 
@@ -19,17 +21,16 @@ name = "pwbot"
 path = "src/lib.rs"
 
 [dependencies]
+dotenv = "0.15.0"
+futures = "0.3.7"
+egg-mode = "0.15.0"
 
-[dependencies.tokio] # for async
-version = "0.3.0"
+[dependencies.tokio]
+default-features = false
+version = "0.2"
 features = ["full"]
 
-[dependencies.egg-mode] # for Twitter
-version = "0.15"
-default-features = false
-features = ["rustls"]
-
-[dependencies.serenity] # for Discord
+[dependencies.serenity]
 default-features = false
 features = [
   "framework",
@@ -39,9 +40,9 @@ features = [
   "model",
   "rustls_backend",
   "utils"]
-version = "0.9.0-rc.2"
+version = "0.9.0-rc.4"
 
-[profile.release] # make exec size smaller
-lto = "on"
-opt-level = 'z'
+[profile.release]
+lto = true
+opt-level = 's'
 codegen-units = 1
