--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ features = [
   "model",
   "rustls_backend",
   "utils"]
-version = "0.9.0-rc.4"
+version = "0.9.0"
 
 [profile.release]
 lto = true
