--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,14 @@ jobs:
         uses: actions-rs/cargo@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          use-cross: true
           command: build
-          args: --locked --all --release
+          args: --all --release
 
       - name: Build PiWarsBot in debug mode
         uses: actions-rs/cargo@v1
         with:
-          use-cross: true
           command: build
-          args: --locked --all
+          args: --all
 
       - name: 'Install (Cargo) binutils, if its release.'
         if: startsWith(github.ref, 'refs/tags/')
