--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup cross-compiliation toolchain
+      - name: Setup toolcchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
