--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,11 @@ jobs:
           cargo install cargo-binutils && rustup component add
           llvm-tools-preview
 
-      - name: Strip the PiWarsBot image if its a release
+      - name: Strip the PiWarsBot executable, if its a release
         if: startsWith(github.ref, 'refs/tags/')
         run: cargo-strip --release -- --strip-all
 
-      - name: Create release for PiWarsBot
+      - name: Create release for PiWarsBot, if its a release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
