--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,24 @@ features = [
   "utils"]
 version = "0.9.0"
 
+[profile.dev]
+lto = true
+opt-level = 3
+codegen-units = 1
+debug = true
+
+[profile.dev.package."*"]
+codegen-units = 1
+opt-level = 3
+debug = true
+
 [profile.release]
 lto = true
-opt-level = 's'
+opt-level = 3
 codegen-units = 1
+debug = true
+
+[profile.release.package."*"]
+codegen-units = 1
+opt-level = 3
+debug = false
